# mapdbsnp

./: Cargo.toml  README.md  readme.md
scripts/: sort-id-map.sh
src/: lib.rs
src/binfmt/: maprecord.rs  mod.rs  readat.rs
src/index/: mod.rs
src/mapper/: mod.rs
tests/: basic_usage.rs
tests/data/: test.in.10.tsv  test.map.10.map  test.map.10.tsv  test.out.10.tsv
