[package]
name = "mapdbsnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
byteorder = { version = "1.4.3", features = ["i128"] }
clap = { version = "4.4.1", features = ["derive"] }
csv = "1.1.6"
mktemp = "0.5.0"
